<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ankieta">


    <ScrollView
        android:layout_width="411dp"
        android:layout_height="726dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Linia1"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="409dp"
                    android:layout_height="73dp"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="4dp">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="166dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="35dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/button2"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="166dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/button1"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="98dp">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="350dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:autofillHints=""
                    android:drawableTint="#76FF03"
                    android:ems="10"
                    android:hint="@string/text1"
                    android:inputType="textPersonName"
                    android:shadowColor="#76FF03"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="98dp">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="350dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/text2"
                    android:inputType="textPersonName"
                    android:shadowColor="#76FF03"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="53dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="229dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="91dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="91dp"
                    android:layout_marginBottom="17dp"
                    android:text="@string/text3"
                    android:textAlignment="center"
                    android:textColor="#090808"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="161dp" >

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/radioGroup3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:background="#651FFF"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHighlight="#000000"
                        android:textColorLink="#000000"
                        android:textSize="48sp" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buton4"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/radioGroup4"
                    app:layout_constraintStart_toEndOf="@+id/radioGroup2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" >

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:background="#651FFF"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHighlight="#000000"
                        android:textColorLink="#000000"
                        android:textSize="48sp" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buton4"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/radioGroup3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" >

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button3"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:background="#651FFF"
                        android:text="2000"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHighlight="#000000"
                        android:textColorLink="#000000"
                        android:textSize="48sp" />

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buton4"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="229dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="91dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="91dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/text4"
                    android:textAlignment="center"
                    android:textColor="#090808"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#252A30"
                android:text="@string/checkBox1"
                android:textColor="#000000"
                android:textColorHighlight="#76FF03"
                android:textColorLink="#76FF03" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FF252A30"
                android:hint="@string/text5"
                android:text="@string/checkBox2"
                android:textColor="#000000"
                android:textColorHighlight="#76FF03"
                android:textColorLink="#76FF03" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FF252A30"
                android:text="@string/checkBox3"
                android:textColor="#000000"
                android:textColorHighlight="#76FF03"
                android:textColorLink="#76FF03" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FF252A30"
                android:text="@string/checkBox4"
                android:textColor="#000000"
                android:textColorHighlight="#76FF03"
                android:textColorLink="#76FF03" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FF252A30"
                android:text="@string/checkBox5"
                android:textColor="#000000"
                android:textColorHighlight="#76FF03"
                android:textColorLink="#76FF03" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#FF252A30"
                android:text="@string/checkBox6"
                android:textColor="#000000"
                android:textColorHighlight="#76FF03"
                android:textColorLink="#76FF03" />

            <EditText
                android:id="@+id/numerTelefonu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text5"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#090808"
                android:textColorHighlight="#090808"
                android:textColorHint="#090808"
                android:textColorLink="#090808"
                android:autofillHints="" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button8" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>